[package]
name = "senti_ros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
nalgebra = {version ="0.32", features = ["serde-serialize"]}
r2r = "0.7"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
